responsive ui issues and kebab menu alignment issues

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   padding: 12px 25px;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   height: 66px;
 }
 .ds-con {
@@ -457,6 +457,10 @@ input:checked + .slider:before {
 }
 //header ends here//
 @media only screen and (min-width: 320px) and (max-width: 425px) {
+  .DropdownContent .news-border{
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 0 !important;
+  }
   .Darkbg{
     background-position-y: 16px;
     padding: 0px 0 0 21px !important;
@@ -484,7 +488,7 @@ input:checked + .slider:before {
   }
   .NavMobileHeader {
     background-color: #023047;
-    padding: 15px 15px 15px 15px;
+    padding: 10px 15px 10px 15px;
     width: 100%;
     border-bottom: 1px solid #074e72;
     top: 0;
@@ -527,6 +531,7 @@ input:checked + .slider:before {
       display: block;
       li {
         width: 100% !important;
+        margin-bottom: 8px;
       }
     }
   }
