--- a/src/app/reusable/components/data-graph/data-graph.component.scss
+++ b/src/app/reusable/components/data-graph/data-graph.component.scss
@@ -192,3 +192,8 @@
     margin-right: 0 !important;
   }
 }
+@media(max-width:768px){
+  .news-mobile{
+    display:none;
+  }
+}
